Fix: need to fix shipping validation

--- a/results/report.html
+++ b/results/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,16867],[[4,5,6,0,[],[1,27,16833],[[7,8,9,0,[],[1,39,16817],[[10,11,12,13,[],[1,43,16808],[],[[14,0,15,[],[1,375,16471],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,20954],[[4,5,6,0,[],[1,30,20921],[[7,8,9,0,[],[1,36,20911],[[10,11,12,13,[],[1,40,20900],[],[[14,0,15,[],[1,393,20540],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Project-Robot","*D:\\codigos\\GitHub\\project-robot","*..","*Tests","*D:\\codigos\\GitHub\\project-robot\\tests","*../tests","*Web","*D:\\codigos\\GitHub\\project-robot\\tests\\web","*../tests/web","*Home","*D:\\codigos\\GitHub\\project-robot\\tests\\web\\home.robot","*../tests/web/home.robot","*<p>Testes relacionados a pagina de HOME da aplicacao\x3c/p>","*Find product with success","*<p>Validar a busca de um produto na aplicacao\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Project-Robot","*D:\\codigos\\GitHub\\project-robot","*..","*Tests","*D:\\codigos\\GitHub\\project-robot\\tests","*../tests","*Web","*D:\\codigos\\GitHub\\project-robot\\tests\\web","*../tests/web","*Product Validation","*D:\\codigos\\GitHub\\project-robot\\tests\\web\\product_validation.robot","*../tests/web/product_validation.robot","*<p>Testes relacionados a pagina de HOME da aplicacao\x3c/p>","*Find product with success","*<p>Validar a busca de um produto na aplicacao\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:16","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:17","fail":0,"id":"s1","label":"Project-Robot","name":"Project-Robot","pass":1,"skip":0},{"elapsed":"00:00:17","fail":0,"id":"s1-s1","label":"Project-Robot.Tests","name":"Tests","pass":1,"skip":0},{"elapsed":"00:00:17","fail":0,"id":"s1-s1-s1","label":"Project-Robot.Tests.Web","name":"Web","pass":1,"skip":0},{"elapsed":"00:00:17","fail":0,"id":"s1-s1-s1-s1","label":"Project-Robot.Tests.Web.Home","name":"Home","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:21","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:21","fail":0,"id":"s1","label":"Project-Robot","name":"Project-Robot","pass":1,"skip":0},{"elapsed":"00:00:21","fail":0,"id":"s1-s1","label":"Project-Robot.Tests","name":"Tests","pass":1,"skip":0},{"elapsed":"00:00:21","fail":0,"id":"s1-s1-s1","label":"Project-Robot.Tests.Web","name":"Web","pass":1,"skip":0},{"elapsed":"00:00:21","fail":0,"id":"s1-s1-s1-s1","label":"Project-Robot.Tests.Web.Product Validation","name":"Product Validation","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1757209742894;
+window.output["baseMillis"] = 1757217964955;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 16891;
+window.output["generated"] = 20997;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
