--- a/results/report.html
+++ b/results/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,28998],[[4,5,6,0,[],[1,34,28955],[[7,8,9,0,[],[1,40,28946],[[10,11,12,13,[],[1,49,28933],[],[[14,0,15,[],[1,403,28573],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,24622],[[4,5,6,0,[],[0,26,24593],[[7,8,9,0,[],[0,30,24583],[[10,11,12,13,[],[0,34,24575],[],[[14,0,15,[],[0,349,24246,16],[]]],[],[1,0,1,0]]],[],[],[1,0,1,0]]],[],[],[1,0,1,0]]],[],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Project-Robot","*D:\\codigos\\GitHub\\project-robot","*..","*Tests","*D:\\codigos\\GitHub\\project-robot\\tests","*../tests","*Web","*D:\\codigos\\GitHub\\project-robot\\tests\\web","*../tests/web","*Product Validation","*D:\\codigos\\GitHub\\project-robot\\tests\\web\\product_validation.robot","*../tests/web/product_validation.robot","*<p>Testes relacionados a pagina de HOME da aplicacao\x3c/p>","*Find product with success","*<p>Validar a busca de um produto na aplicacao\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Project-Robot","*D:\\codigos\\GitHub\\project-robot","*..","*Tests","*D:\\codigos\\GitHub\\project-robot\\tests","*../tests","*Web","*D:\\codigos\\GitHub\\project-robot\\tests\\web","*../tests/web","*Product Validation","*D:\\codigos\\GitHub\\project-robot\\tests\\web\\product_validation.robot","*../tests/web/product_validation.robot","*<p>Testes relacionados a pagina de HOME da aplicacao\x3c/p>","*Find product with success","*<p>Validar a busca de um produto na aplicacao\x3c/p>","*Element with locator '//strong[text()=\"Produto adicionado no carrinho\"]' not found."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:29","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:29","fail":0,"id":"s1","label":"Project-Robot","name":"Project-Robot","pass":1,"skip":0},{"elapsed":"00:00:29","fail":0,"id":"s1-s1","label":"Project-Robot.Tests","name":"Tests","pass":1,"skip":0},{"elapsed":"00:00:29","fail":0,"id":"s1-s1-s1","label":"Project-Robot.Tests.Web","name":"Web","pass":1,"skip":0},{"elapsed":"00:00:29","fail":0,"id":"s1-s1-s1-s1","label":"Project-Robot.Tests.Web.Product Validation","name":"Product Validation","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:24","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:25","fail":1,"id":"s1","label":"Project-Robot","name":"Project-Robot","pass":0,"skip":0},{"elapsed":"00:00:25","fail":1,"id":"s1-s1","label":"Project-Robot.Tests","name":"Tests","pass":0,"skip":0},{"elapsed":"00:00:25","fail":1,"id":"s1-s1-s1","label":"Project-Robot.Tests.Web","name":"Web","pass":0,"skip":0},{"elapsed":"00:00:25","fail":1,"id":"s1-s1-s1-s1","label":"Project-Robot.Tests.Web.Product Validation","name":"Product Validation","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1757221652804;
+window.output["baseMillis"] = 1757283341851;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 29027;
+window.output["generated"] = 24676;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
