--- a/results/report.html
+++ b/results/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,60462],[[4,5,6,0,[],[1,31,60424],[[7,8,9,0,[],[1,36,60416],[[10,11,12,13,[],[1,49,60398],[],[[14,0,15,[],[1,393,60050],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,58108],[[4,5,6,0,[],[1,34,58072],[[7,8,9,0,[],[1,39,58064],[[10,11,12,13,[],[1,62,58039],[],[[14,0,15,[],[1,519,57578],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Project-Robot","*D:\\codigos\\GitHub\\project-robot","*..","*Tests","*D:\\codigos\\GitHub\\project-robot\\tests","*../tests","*Web","*D:\\codigos\\GitHub\\project-robot\\tests\\web","*../tests/web","*Product Validation","*D:\\codigos\\GitHub\\project-robot\\tests\\web\\product_validation.robot","*../tests/web/product_validation.robot","*<p>Testes relacionados a pagina de HOME da aplicacao\x3c/p>","*Find product with success","*<p>Validar a busca de um produto na aplicacao\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Project-Robot","*D:\\codigos\\GitHub\\project-robot","*..","*Tests","*D:\\codigos\\GitHub\\project-robot\\tests","*../tests","*Web","*D:\\codigos\\GitHub\\project-robot\\tests\\web","*../tests/web","*webAutomation","*D:\\codigos\\GitHub\\project-robot\\tests\\web\\webAutomation.robot","*../tests/web/webAutomation.robot","*<p>Testes relacionados a pagina de HOME da aplicacao\x3c/p>","*Find product with success","*<p>Validar a busca de um produto na aplicacao\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:01:00","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:01:00","fail":0,"id":"s1","label":"Project-Robot","name":"Project-Robot","pass":1,"skip":0},{"elapsed":"00:01:00","fail":0,"id":"s1-s1","label":"Project-Robot.Tests","name":"Tests","pass":1,"skip":0},{"elapsed":"00:01:00","fail":0,"id":"s1-s1-s1","label":"Project-Robot.Tests.Web","name":"Web","pass":1,"skip":0},{"elapsed":"00:01:00","fail":0,"id":"s1-s1-s1-s1","label":"Project-Robot.Tests.Web.Product Validation","name":"Product Validation","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:58","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:58","fail":0,"id":"s1","label":"Project-Robot","name":"Project-Robot","pass":1,"skip":0},{"elapsed":"00:00:58","fail":0,"id":"s1-s1","label":"Project-Robot.Tests","name":"Tests","pass":1,"skip":0},{"elapsed":"00:00:58","fail":0,"id":"s1-s1-s1","label":"Project-Robot.Tests.Web","name":"Web","pass":1,"skip":0},{"elapsed":"00:00:58","fail":0,"id":"s1-s1-s1-s1","label":"Project-Robot.Tests.Web.webAutomation","name":"webAutomation","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1757296447496;
+window.output["baseMillis"] = 1757297832529;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 60494;
+window.output["generated"] = 58132;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
